[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Menus/SelectionMenu/SelectionMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/interface/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/roboto_50.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/roboto_24.tres" type="DynamicFont" id=4]

[node name="SelectionMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="TeamMenu" type="Control" parent="Container"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container/TeamMenu"]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 1.0
margin_left = 75.0
margin_top = -234.0
margin_right = 645.0
margin_bottom = -306.0
custom_constants/separation = 150

[node name="Team1Button" type="Button" parent="Container/TeamMenu/VBoxContainer"]
margin_right = 570.0
margin_bottom = 159.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "TEAM 1"

[node name="Team2Button" type="Button" parent="Container/TeamMenu/VBoxContainer"]
margin_top = 309.0
margin_right = 570.0
margin_bottom = 468.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "TEAM 2"

[node name="ClassMenu" type="Control" parent="Container"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Container/ClassMenu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -381.0
margin_right = 619.0
margin_bottom = 381.0
rect_pivot_offset = Vector2( 259, 381 )
custom_constants/separation = 75

[node name="Class1Button" type="Button" parent="Container/ClassMenu/VBoxContainer2"]
margin_right = 519.0
margin_bottom = 134.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "ASSAULT"

[node name="Class2Button" type="Button" parent="Container/ClassMenu/VBoxContainer2"]
margin_top = 209.0
margin_right = 519.0
margin_bottom = 343.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "VANGUARD"

[node name="Class3Button" type="Button" parent="Container/ClassMenu/VBoxContainer2"]
margin_top = 418.0
margin_right = 519.0
margin_bottom = 552.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "SPECIALIST"

[node name="Class4Button" type="Button" parent="Container/ClassMenu/VBoxContainer2"]
margin_top = 627.0
margin_right = 519.0
margin_bottom = 762.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "PILOT"

[node name="SpawnMenu" type="Control" parent="Container"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Buttons" type="Control" parent="Container/SpawnMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpawnButton" type="Button" parent="Container/SpawnMenu"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -298.0
margin_top = -302.0
margin_right = -100.0
margin_bottom = -220.0
custom_fonts/font = ExtResource( 4 )
text = "Deploy"

[node name="ViewButton" type="Button" parent="Container/SpawnMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -298.0
margin_top = -182.0
margin_right = -100.0
margin_bottom = -100.0
custom_fonts/font = ExtResource( 4 )
text = "Change View"
[connection signal="pressed" from="Container/TeamMenu/VBoxContainer/Team1Button" to="." method="_set_team" binds= [ 1 ]]
[connection signal="pressed" from="Container/TeamMenu/VBoxContainer/Team2Button" to="." method="_set_team" binds= [ 2 ]]
[connection signal="pressed" from="Container/ClassMenu/VBoxContainer2/Class1Button" to="." method="_set_class" binds= [ 0 ]]
[connection signal="pressed" from="Container/ClassMenu/VBoxContainer2/Class2Button" to="." method="_set_class" binds= [ 1 ]]
[connection signal="pressed" from="Container/ClassMenu/VBoxContainer2/Class3Button" to="." method="_set_class" binds= [ 3 ]]
[connection signal="pressed" from="Container/ClassMenu/VBoxContainer2/Class4Button" to="." method="_set_class" binds= [ 2 ]]
[connection signal="pressed" from="Container/SpawnMenu/SpawnButton" to="." method="_on_SpawnButton_pressed"]
[connection signal="pressed" from="Container/SpawnMenu/ViewButton" to="." method="_on_ViewButton_pressed"]
